--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "coverage": "vitest run --coverage",
     "lint": "eslint src",
     "lint: fix": "eslint src --fix",
-    "format": "prettier . --write"
+    "format": "prettier . --write",
+    "prepare": "husky install"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -32,10 +33,18 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "happy-dom": "^13.0.7",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.2.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vite-tsconfig-paths": "^4.2.3",
-    "vitest": "^1.2.0",
-    "prettier": "^3.2.2"
+    "vitest": "^1.2.0"
+  },
+  "lint-staged": {
+    "*.{js, jsx, ts, tsx}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
   }
 }
