--- a/.github/workflows/lint_test.yml
+++ b/.github/workflows/lint_test.yml
@@ -15,7 +15,7 @@ jobs:
           node-version: "20"
 
       - name: Install Dependencies
-        run: npm ci
+        run: yarn
 
       - name: Run Lint
         run: yarn lint
