--- a/package.json
+++ b/package.json
@@ -64,12 +64,12 @@
     "vitest": "^1.2.0"
   },
   "lint-staged": {
-    "*.{js, jsx, ts, tsx}": [
+    "*.{js,jsx,ts,tsx}": [
       "prettier --write",
       "eslint --fix"
     ]
   },
   "ignorePatterns": [
-    "!.storybook"
+    "!**/.storybook/**/*"
   ]
 }
